Modified template and Makefile, added first slides.

--- a/slides/template.tex
+++ b/slides/template.tex
@@ -33,6 +33,9 @@
 
 \usepackage{xcolor}
 
+\usepackage{listings}
+\lstset{basicstyle=\footnotesize, xleftmargin=-0.25in}
+
 \usepackage{adjustbox}
 
 \usepackage[absolute,overlay]{textpos}
