Added slides about compilers, linkers, and build systems.

--- a/slides/template.tex
+++ b/slides/template.tex
@@ -61,6 +61,7 @@
 }
 \newcommand{\codefile}[2][]{\lstinputlisting[language=c++,frame=single,breaklines=true,#1]{#2}}
 \lstnewenvironment{code}{\lstset{language=c++,frame=single}}{}
+\newcommand{\cmd}[1]{\begin{center}\texttt{#1}\end{center}}
 
 
 \begin{document}
