Two minor fixes.

--- a/slides/05_tools3.tex
+++ b/slides/05_tools3.tex
@@ -208,7 +208,7 @@ void my_function()
   \begin{frame}[fragile]
     \frametitle{Profiling with instrumentation}
 
-    Do not use \texttt{cock()}!
+    Do not use \texttt{clock()}!
     \begin{itemize}
       \item It measures \emph{CPU time}, not \emph{elapsed time}.
       \item \texttt{CLOCKS\_PER\_SEC} is \emph{not} the number of clock ticks per second.
