Updated slides on theory.

--- a/slides/07_parallelism_theory.tex
+++ b/slides/07_parallelism_theory.tex
@@ -218,7 +218,7 @@
 
     Let $T_f^1$ be the time required to do the \emph{fixed} amount of work $s+p$ \emph{sequentially}.
 
-    Let $T_f^N=s$ be the time required to do the same amount of work $s+p$ in \emph{parallel} using $N$ \emph{workers}.
+    Let $T_f^N$ be the time required to do the same amount of work $s+p$ in \emph{parallel} using $N$ \emph{workers}.
 
     (\emph{Note:} Our definitions differ from those used by Hager \& Wellein.)
   \end{frame}
