--- a/slides/09_openmp_features.tex
+++ b/slides/09_openmp_features.tex
@@ -74,7 +74,7 @@
 
 \begin{document}
   % Title page
-  \title{Main features of OpenMP}
+  \title{Main Features of OpenMP}
   \subtitle{Computational Science II (CAAM 520)}
   \author{Christopher Thiele}
   \date{Rice University, Spring 2020}
