--- a/slides/10_thread_safety.tex
+++ b/slides/10_thread_safety.tex
@@ -100,7 +100,7 @@
     \[\sqrt{x^2+y^2}\le 1.\]
 
     Then
-    \[\frac{\pi^2}4\approx\frac{\#(\text{points inside quarter circle})}{\#(\text{points})}.\]
+    \[\frac{\pi}4\approx\frac{\#(\text{points inside quarter circle})}{\#(\text{points})}.\]
   \end{frame}
 
   \begin{frame}[fragile]
