--- a/slides/12_openmp_tasks.tex
+++ b/slides/12_openmp_tasks.tex
@@ -153,7 +153,7 @@ int i;
 
   #pragma omp task
   {
-    // Task has a "shared" view of j.
+    // Task has a "shared" view of i.
     // Task has a "firstprivate" copy of j.
   }
 }
